--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="skills-stats-details">
                                 <div class="skilldetails">
                                     <h3>HTML</h3>
-                                    <h4>(Immediate Lv3.)</h4>
+                                    <h4>(Intermediate Lv3.)</h4>
                                 </div> 
                                 <div class="progress-bar">
                                     <div class="glow">
@@ -97,7 +97,7 @@
                             <div class="skills-stats-details">
                                 <div class="skilldetails">
                                     <h3>CSS</h3>
-                                    <h4>(Immediate Lv3.)</h4>
+                                    <h4>(Intermediate Lv3.)</h4>
                                 </div> 
                                 <div class="progress-bar">
                                     <div class="glowcss">
