Portfolio page was added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="home sub-container">
             <div class="greetings">
                 <h1>Hello,</h1>
-                <h2>Human</h2>
+                <h2 class="typing-text"><span></span></h2>
             </div>
             <p>Welcome to this Portfolio Website</p>
         </div>
@@ -42,12 +42,12 @@
                 <span></span>
                 <span></span>
                 <div class="about-inner">
-                    <img src="Images/IMG_20231231_094932_707P.jpg" alt="">
+                    <img src="Images/Me(Completed).png" alt="">
                     <div class="stats">
                         <div class="stats-de">
                             <div class="stats-details">
                                 <h3>Name</h3> 
-                                <h2>Afilaka Precious Peter</h2>
+                                <h2>Precious Peter Afilaka</h2>
                             </div>
                             <div class="cseparator"><div class="separator"></div></div>
                             <div class="stats-details">
@@ -167,6 +167,18 @@
 
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <div class="portfolio-hero container">
+        <div class="portfolio sub-container">
+            <h2>Want to see my past works? Let's Isekai for a bit!</h2>
+            <a class="glowport" href="Portfolio/portfolio.html">
+                <span></span>
+                <span></span>
+                <h3>Truck-kun</h3>
+            </a>
         </div>
     </div>
 
