Project page was updated

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <h1>HappyNatsu</h1>
             </div>
             <nav>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Skills</a>
-                <a href="">Portfolio</a>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#project">Projects</a>
                 <a href="">Contact</a>
             </nav>
         </div>
     </div>
 
-    <div class="home-hero container">
+    <div class="home-hero container" id="home">
         <div class="home sub-container">
             <div class="greetings">
                 <h1>Hello,</h1>
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="about-hero container">
+    <div class="about-hero container" id="about">
         <div class="about sub-container">
             <div class="about-glow">
                 <span></span>
@@ -63,7 +63,7 @@
                         <div class="divider"></div>
                         <div class="stats-bio">
                             <h2>Bio</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam debitis accusantium voluptates, laboriosam laudantium reiciendis, non atque voluptas eligendi unde sunt dolorem pariatur in, adipisci nam repellendus quae mollitia natus.</p>
+                            <p>Hello! I am Afilaka Precious Peter[APP], a passionate web developer with a keen interest in creating beautiful and functional websites. <br> I love to learn and explore new technologies to improve my skills and deliver high-quality solutions to my clients.</p>
                         </div>
                     </div>
 
@@ -73,7 +73,7 @@
     </div>
 
 
-    <div class="skills-hero container">
+    <div class="skills-hero container" id="skills">
         <div class="skills sub-container">
             <div class="skills-glow">
                 <div class="skills-inner">
@@ -171,10 +171,10 @@
     </div>
 
 
-    <div class="portfolio-hero container">
+    <div class="portfolio-hero container" id="project">
         <div class="portfolio sub-container">
-            <h2>Want to see my past works? Let's Isekai for a bit!</h2>
-            <a class="glowport" href="Portfolio/portfolio.html">
+            <h2>Want to see my past projects? Let's Isekai for a bit!</h2>
+            <a class="glowport" href="Projects/project.html">
                 <span></span>
                 <span></span>
                 <h3>Truck-kun</h3>
