Page Pics cwas added

--- a/Projects/project.html
+++ b/Projects/project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="project.css">
+    <link rel="icon" href="Images/Screenshot_49.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
@@ -17,7 +18,7 @@
                 <h1>HappyNatsu</h1>
             </div>
             <nav>
-                <a href="">Home</a>
+                <a href="https://happynatsu10.github.io/Original_Portfolio/">Home</a>
                 <a href="">About</a>
                 <a href="">Skills</a>
                 <a href="">Projects</a>
