--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                             </div>
                             <div class="cseparator"><div class="separator"></div></div>
                             <div class="stats-details">
-                                <h3>Age</h3> 
-                                <h2>20 years</h2>
+                                <h3>Work Experience</h3> 
+                                <h2>1 year</h2>
                             </div>
                             <div class="cseparator"><div class="separator"></div></div>
                             <div class="stats-details">
                                 <h3>Date of Birth</h3> 
-                                <h2>27th December 2003</h2>
+                                <h2>27th December</h2>
                             </div>
                         </div>
                         <div class="divider"></div>
