--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             </div>
                             <div class="cseparator"><div class="separator"></div></div>
                             <div class="stats-details">
-                                <h3>Work Experience</h3> 
-                                <h2>1 year</h2>
+                                <h3>Github</h3> 
+                                <h2><a href="https://github.com/HappyNatsu10">Click here</a></h2>
                             </div>
                             <div class="cseparator"><div class="separator"></div></div>
                             <div class="stats-details">
